# CoreCDTL-test

./: .clang-format  .editorconfig  .gitigonre  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: core_ci_tests.yml  core_release_cicd.yml
ctl/: art.c  art.h  corecdtl-ctl.c
include/: core_api.h  core_utils.h  gateway.h  jit_stub_generator.h  platform.h  plugin_api.h
libs/jit/: jit_stub_generator.cpp  jit_stub_generator.h
public_headers/plugin/include/CoreCDTL/: plugin_api.h
src/core/: core_ctl.c  core_ctl.h  core_test.c  cored.c  crash_recovery.c  crash_recovery.h  event_bus.c  event_bus.h  heapkit.c  heapkit.h  log.c  log.h  runtime.c  runtime.h  scheduler.c  scheduler.h
src/gateway/: gateway.c  gateway_dispatcher.c  gateway_dispatcher.h
src/jit/: llvm_jit.c  llvm_jit.h
src/plugin/: plugin_loader.c  plugin_loader.h  plugin_manager.c  plugin_manager.h  plugin_stub.c  plugin_stub.h
src/utils/: utils_id.h  utils_string.c  utils_string.h
tests/: CMakeLists.txt  test_event_bus.c  test_heapkit.c  test_main.c  test_scheduler.c
tests/helpers/: test_helpers.c  test_helpers.h
tests/unity/: unity.c
